[package]
name = "thread_pool"
version = "0.1.0"
authors = ["Prajith <kprajith@amazon.com>"]
edition = "2018"
description = "A simple thread pool implementation, to learn Rust"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
lazy_static = "1.4.0"
